# spectre-ensembles

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  pyproject.toml  requirements.txt  spectre_agents_config.yaml  walkthrough.md
.claude/agents/: dashboard-manager.md  forcing-data-qc.md  mitgcm-stdout-diagnostics.md  model-output-review.md  namelist-validator.md  notify.md  simulation-orchestrator.md  web-research.md  workflow-runner.md
.github/workflows/: docker-publish.yml
docs/: discord-setup.md
env/: derecho.sh  galapagos-franklin-glorysv12-curvilinear.sh  galapagos-franklin.sh
etc/: glorys-1-12.yaml  glorys-downscale.yaml  glorys-v12.yaml
example/: testrun384.sh
opt/: derecho  galapagos-franklin
simulations/glorysv12-curvilinear/: README.md
spectre_agents/: __init__.py  __main__.py  config.py  context.py  types.py
spectre_agents/agents/: __init__.py  base.py  dashboard_manager.py  forcing_data_qc.py  model_output_review.py  namelist_validator.py  notify.py  orchestrator.py  stdout_diagnostics.py  web_research.py  workflow_runner.py
spectre_utils/: animate_exf_conditions.py  animate_obc_conditions.py  breed_vectors.py  build-mitgcm.sh  common.py  compute_bulk_fluxes.py  convert_diagnostics_to_netcdf.py  create_curvilineargrid_from_nemo.py  directorydb.py  download_era5.py  download_glorys12_raw.py  ensemble_dashboard.py  mitgcm_mon_tail.py  mitgcm_monitor_dashboard.py  mitgcm_output_to_netcdf.py  mitgcm_surface_plots.py  mk_cheapaml_conditions.py  mk_exf_conditions.py  mk_exf_wind_on_model_grid.py  mk_initial_conditions.py  mk_ocean_boundary_conditions.py  monitor_dashboard.py  pickup_to_init.py  plot_diagnostics_binary.py  plot_surface_fields.py  review_exf_conditions.py  review_obc_conditions.py
src/: __init__.py  build-mitgcm.sh  common.py  mk_cheapaml_conditions.py  mk_initial_conditions.py
systemd/: spectre-agents.service
(+78 files in other folders)
